more html/css stuff

--- a/pool-stats.html
+++ b/pool-stats.html
@@ -17,7 +17,7 @@
 			<!-- top informational bar -->
 			<div class="navbar navbar-inverse navbar-fixed-top" id="info-bar">
 				<div class="navbar-inner">
-					<a class="brand" href="index.html">Eclipse MC</a>
+					<a class="brand" href="index.shtml">Eclipse MC</a>
 					
 					<!-- server stats are always shown -->
 					<div class="stats server-stats">
@@ -68,7 +68,7 @@
 			<div class="navbar" id="navigation">
 				<div class="navbar-inner">
 					<ul class="nav">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.shtml">Home</a></li>
 						<li><a href="account.html">Account</a></li>
 						<li class="active"><a href="pool-stats.html">Pool Stats</a></li>
 						<li><a href="stats.html">Hall of Fame</a></li>
